package fr.enseirb_matmeca.p220_iabied_nabrouk_wamine.logic;

class Client extends Actor{
    
}
